--- a/12.Profile_Card/style.css
+++ b/12.Profile_Card/style.css
@@ -6,9 +6,127 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+a {
+  text-decoration: none;
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   background: #f4f4f4;
+}
+.profile-card {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  max-width: 370px;
+  width: 100%;
+  background: #fff;
+  border-radius: 24px;
+  padding: 25px;
+  box-shadow: 0 5px 10px rgb(0, 0, 0, 0.1);
+}
+.profile-card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 36%;
+  width: 100%;
+  border-radius: 24px 24px 0 0;
+  background: #332d5a;
+}
+.image {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: #332d5a;
+  padding: 3px;
+  box-shadow: 0 0 8px rgb(0, 0, 0, 0.3);
+}
+.profile-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 3px solid #fff;
+}
+/* .profile-card .text-data span {
+  display: block;
+  text-align: center;
+} */
+.profile-card .text-data {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: #333;
+  margin-top: 20px;
+}
+.text-data .name {
+  font-size: 22px;
+  font-weight: 900;
+}
+.text-data.job {
+  font-size: 15px;
+}
+.profile-card .media-buttons {
+  display: flex;
+  align-items: center;
+  margin-top: 16px;
+}
+.media-buttons .link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 18px;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  margin: 8px;
+}
+.buttons {
+  display: flex;
+  align-items: center;
+  margin-top: 25px;
+}
+.buttons .button {
+  padding: 8px 24px;
+  margin: 0 10px;
+  color: #fff;
+  font-size: 14px;
+  background: #6860a1;
+  border-radius: 10em;
+  border: none;
+  cursor: pointer;
+}
+.buttons .button:hover {
+  background: #332d5a;
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
+}
+.analytics {
+  display: flex;
+  /* align-items: center; */
+  margin-top: 25px;
+}
+.analytics .data {
+  display: flex;
+  align-items: center;
+  color: #333;
+  padding: 0 20px;
+  border-right: 2px solid #e7e7e7;
+}
+.analytics .data .bx {
+  font-size: 20px;
+  margin-right: 6px;
+}
+.analytics .data:last-child {
+  border-right: 0;
 }
