--- a/13.NETFLIX/style.css
+++ b/13.NETFLIX/style.css
@@ -19,6 +19,7 @@ body::before {
   height: 100%;
   background: url(images/background.jpg);
   background-size: 116%;
+  /* box-shadow: inset 0 0 10px rgb(0, 0, 0, 0.7); */
 }
 nav {
   position: fixed;
@@ -27,4 +28,96 @@ nav {
 }
 nav a img {
   width: 167px;
+}
+.form-wrapper {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  border-radius: 4px;
+  padding: 70px;
+  width: 450px;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.75);
+}
+.form-wrapper h2 {
+  color: #fff;
+  font-size: 2em;
+}
+.form-wrapper form {
+  margin: 25px 0 65px;
+}
+.form-control {
+  position: relative;
+  height: 50px;
+  margin-bottom: 16px;
+}
+.form-control input {
+  width: 100%;
+  height: 100%;
+  background: #333;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 1rem;
+  padding: 0 20px;
+}
+/* .form-control input:focus,
+.form-control input:valid {
+  background: #444;
+  padding: 16px 20px 0;
+} */
+.form-control input:is(:focus, :valid) {
+  background: #444;
+  padding: 16px 20px 0;
+}
+.form-control label {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  color: #8c8c8c;
+  font-size: 1rem;
+  transform: translateY(-50%);
+  transition: all 0.1s ease;
+}
+/* .form-control input:focus + label,
+.form-control input:valid + label {
+  font-size: 0.75rem;
+  transform: translateY(-130%);
+} */
+.form-control input:is(:focus, :valid) ~ label {
+  font-size: 0.75rem;
+  transform: translateY(-130%);
+}
+form button {
+  width: 100%;
+  padding: 16px 0;
+  font-size: 1rem;
+  background: #e50914;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+  margin: 25px 0 10px;
+  cursor: pointer;
+  transition: 0.1s ease;
+}
+
+form button:hover {
+  background: #c40812;
+  transform: scale(0.98);
+}
+.form-help {
+  display: flex;
+  justify-content: space-between;
+  color: #b3b3b3;
+  font-size: 0.75rem;
+}
+.form-help a {
+  color: #b3b3b3;
+  text-decoration: none;
+}
+.form-help a:hover {
+  text-decoration: underline;
 }
